VDR Plugin 'epgfixer' Revision History
--------------------------------------
2012-xx-xx: Version 0.0.7

- Support for character set conversion for selected channels.
- Support for stripping HTML entities.
- Cleaning up code (some cleanup by Rolf Ahrenberg).

2012-04-13: Version 0.0.6

- Bug fix release.

2012-04-13: Version 0.0.5

- Support using channel IDs in channel list in addition to channel numbers.

2012-04-12: Version 0.0.4

- Allow enabling regular expressions for only selected channels.

2012-03-25: Version 0.0.3

- Reloading regular expressions and clearing EPG data from setup menu. 
- Enable internal optimisation of regular expressions in PCRE.
- Enabling/disabling of regular expressions from setup menu.
- Editing of regular expressions from setup menu.
- Cleaning up code (some cleanup by Rolf Ahrenberg).

2012-03-18: Version 0.0.2

- Rewrite to use regular expressions.
- Include EPG bug fixes from VDR and make them individually selectable 
  from setup.

2012-03-17: Version 0.0.1

- Initial revision.