@@ -1,8 +1,8 @@
 This is a "plugin" for the Video Disk Recorder (VDR).
 
-Written by:                  Matti Lehtimäki <matti.lehtimaki@gmail.com>
+Written by:           Matti Lehtimäki <matti.lehtimaki@gmail.com>
 
-Project's homepage:          http://projects.vdr-developer.org/projects/plg-epgfixer
+Project's homepage:   http://projects.vdr-developer.org/projects/plg-epgfixer
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -10,20 +10,42 @@ the Free Software Foundation; either version 2 of the License, or
 (at your option) any later version.
 See the file COPYING for more information.
 
-Description:
-
-Epgfixer is a VDR plugin for doing extra fixing of EPG data. Everything is
-done using regular expressions. Correctly named back references are placed
-to the named EPG field.
-
-Plugin also has EPG bug fixes included in VDR individually selectable from
-setup menu.
-
 Requirements:
  - VDR 1.7.26 or later
- - PCRE
+ - PCRE library
 
-Usage:
+Description:
+
+Epgfixer is a VDR plugin for doing extra fixing of EPG data.
+
+Features:
+
+- Modifying EPG data using regular expressions. Correctly named back references
+  are placed to the named EPG field.
+- Character set conversions for channel using incorrect encoding.
+- Both regular expressions and character set conversions can be applied to 
+  either all channels or only to selected channels.
+- Editing regular expressions and character set conversions through setup menu.
+- EPG bug fixes included in VDR individually selectable from
+  setup menu.
+
+Installation:
+
+cd /put/your/path/here/VDR/PLUGINS/src
+tar -xzf /put/your/path/here/vdr-epgfixer-X.Y.Z.tgz
+ln -s epgfixer-X.Y.Z epgfixer
+cd /put/your/path/here/VDR
+cp -R PLUGINS/src/epgfixer/epgfixer /path/to/vdrconf/plugins/
+make
+make plugins
+./vdr -P epgfixer
+
+Configuration:
+
+Regular expressions and character set conversions are defined in regexp.conf
+and charset.conf, respectively, located in VDR's configuration directory for
+plugins. Check the example configuration files under "epgfixer" subdirectory
+for further information.
 
 General syntax of configuration files:
 - Lines beginning with # are regarded as comments.
@@ -32,8 +54,6 @@ General syntax of configuration files:
   is used. If no list of channels is given the line is used for all channels.
 - Channel_list can contain either channel IDs (e.g. S19.2E-1-1089-12003-0) or
   numbers but not both.
-
-All regular expressions are placed to VDRPLUGINCONFDIR/epgfixer/regexp.conf.
 
 Syntax of regexp.conf line is "Channel_list:Parsed_epg_field=Regexp" with:
 - Parsed_epg_field is the EPG field for which the regular expression is applied
@@ -45,33 +65,5 @@ Syntax of regexp.conf line is "Channel_list:Parsed_epg_field=Regexp" with:
   content of the target EPG field, respectively.
 - Several regular expressions may be applied to same field.
 
-All character set conversions are placed to 
-VDRPLUGINCONFDIR/epgfixer/charset.conf.
-
 Syntax of charset.conf line is "Channel_list:OriginalCharSet" with:
 - OriginalCharSet is a name of a character set (e.g. iso8859-1).
-
-Examples of regexp.conf:
-
-# Example of disabled regexp:
-!title=^(?:Movie: |Document: )(?<title>.*)$
-
-# Remove "Movie: " or "Document: " from the beginning of title field for 
-# channels 1, 3 and 5:
-1,3,5:title=^(?:Movie: |Document: )(?<title>.*)$
-
-# Move parental rating from end of title to correct EPG field:
-# Program title (12)
-title=^(?<title>.*)[ ][(](?<rating>[0-9S]{1,2})[)][ ]*$
-
-
-Examples of charset.conf:
-
-# Convert character set of channels 1, 2 and 3 from iso8859-1 to character set
-# used by VDR
-1,2,3:iso8859-1
-
-# Convert character set of all channels from iso8859-1 to character set 
-# used by VDR
-iso8859-1
-
