@@ -1,6 +1,6 @@
 # Convert character set of channels 1, 2 and 3 from iso8859-1 to character set
 # used by VDR
-1,2,3:iso8859-1
+#1,2,3:iso8859-1
 # Convert character set of all channels from iso8859-1 to character set 
 # used by VDR
-iso8859-1
+#iso8859-1
