@@ -1,4 +1,10 @@
-# Remove "Movie: " or "Document: " from the beginning of title field:
-title=^(?:Movie: |Document: )(?<title>.*)$
+# Example of disabled regexp:
+!title=^(?:Movie: |Document: )(?<title>.*)$
+
+# Remove "Movie: " or "Document: " from the beginning of title field for 
+# channels 1, 3 and 5:
+1,3,5:title=^(?:Movie: |Document: )(?<title>.*)$
+
 # Move parental rating from end of title to correct EPG field:
+# Program title (12)
 title=^(?<title>.*)[ ][(](?<rating>[0-9S]{1,2})[)][ ]*$
